# le-mod-manager

./: .gitignore  Cargo.toml  Dioxus.toml  README.md
.github/workflows/: rust.yml
crates/lemm_app/: Cargo.toml  Dioxus.toml
crates/lemm_app/assets/: update_theme.js
crates/lemm_app/src/: app.rs  main.rs  route.rs
crates/lemm_app/src/components/: container.rs  directory_input.rs  file_list_item.rs  mod.rs  mod_list_item.rs  navbar.rs  toast_area.rs
crates/lemm_app/src/data/: color.rs  mod_options.rs  stored_load_order.rs
crates/lemm_app/src/pages/: create.rs  ds2.rs  home.rs  install.rs  mod.rs  settings.rs
crates/lemm_app/src/pages/state/: create_state.rs  ds2_state.rs  install_state.rs  mod.rs  settings_state.rs  toast_manager.rs
crates/lemm_app/src/server/: create_server_funcs.rs  ds2_server_funcs.rs  mod.rs
crates/lib_lemm/: Cargo.toml
crates/lib_lemm/src/: lib.rs
crates/lib_lemm/src/data/: mod.rs
crates/lib_lemm/src/data/archive/: file_queue.rs  mod.rs  mod_archive.rs
crates/lib_lemm/src/data/package/: mod.rs  package_file.rs  package_file_raw.rs  package_file_type.rs  package_header.rs  package_header_raw.rs  package_member_header.rs  package_member_raw.rs  package_member_type.rs  package_raw.rs  package_reader.rs  package_writer.rs
crates/lib_lemm/src/data/util/: mod.rs
le_mod_manager/: Cargo.toml  build.rs
le_mod_manager/src/: app.rs  main.rs  route.rs
le_mod_manager/src/components/: button.rs  file_list.rs  file_list_item.rs  mod_list_item.rs  navbar.rs  toast_area.rs
le_mod_manager/src/data/: mod.rs  size.rs  util.rs
le_mod_manager/src/pages/: create.rs  ds2.rs  home.rs  mod.rs  settings.rs
le_mod_manager/src/pages/state/: create_state.rs  ds2_state.rs  mod.rs  settings_state.rs
le_mod_manager/src/panic/: mod.rs  panic_info.rs  panic_location.rs
le_mod_manager/src/server/: create_server_funcs.rs  ds2_server_funcs.rs  mod.rs  util.rs
lib_lemm/: Cargo.toml
lib_lemm/src/data/: mod.rs
lib_lemm/src/data/archive/: mod_archive.rs
lib_lemm/src/data/package/: package_header.rs  package_header_raw.rs  package_member_ref.rs  package_reader.rs
src/: app.rs  lib.rs  main.rs  route.rs
src/components/: button.rs
src/data/: app_state.rs  color.rs  mod.rs  padding.rs  size.rs
src/data/archive/: mod.rs
src/data/package/: mod.rs  package_member_type.rs
src/pages/: mod.rs  not_found.rs
