[package]
name = "le_mod_manager"
version = "0.1.0"
authors = ["juicermv <juicermv@icloud.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = ["router"] }
dioxus-motion = {version="0.3.1", default-features = false }
rfd = "0.15.3"
strum = { version = "0.27.1" }
strum_macros = "0.27.1"

[features]
default = ["desktop"]
desktop = [
    "dioxus/desktop",
    "dioxus-motion/desktop",
    "dioxus-motion/transitions",
]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
