[package]
name = "le_mod_manager"
version = "0.1.0"
authors = ["juicermv <juicermv@icloud.com>"]
repository = "https://github.com/juicermv/le-mod-manager"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.3", features = ["router", "fullstack", "cli-config", "logger"] }
rfd = "0.15.3"
strum = { version = "0.27.1" }
strum_macros = "0.27.1"
lib_lemm = { workspace = true }
rand = "0.9.1"
dunce = "1.0.5"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.22"
directories = "6.0.0"
anyhow = "1.0.98"
async-std = "1.13.1"
tokio = { version = "1.44.2", features = ["rt-multi-thread", "time"] }
once_cell = "1.21.3"
serde_json = "1.0.140"
chrono = "0.4.41"

[features]
default = ["desktop"]
desktop = ["dioxus/desktop"]
server = ["dioxus/server"]
