[package]
name = "lemm_app"
version = "0.1.0"
authors = ["juicermv <juicermv@icloud.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = ["router"] }
dioxus-motion = {version="0.3.1", default-features = false }
rfd = "0.15.3"
strum = { version = "0.27.1" }
strum_macros = "0.27.1"
lib_lemm = { path = "../lib_lemm" }
rand = "0.9.0"
dunce = "1.0.5"
serde = "1.0.219"
toml = "0.8.20"
directories = "6.0.0"
anyhow = "1.0.97"

[features]
default = ["desktop"]
desktop = [
    "dioxus/desktop",
    "dioxus-motion/desktop",
    "dioxus-motion/transitions",
]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
