[package]
name = "lemm_app"
version = "0.1.0"
authors = ["juicermv <juicermv@icloud.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.3", features = ["router", "fullstack"] }
rfd = "0.15.3"
strum = { version = "0.27.1" }
strum_macros = "0.27.1"
lib_lemm = { path = "../lib_lemm" }
rand = "0.9.1"
dunce = "1.0.5"
serde = { version =  "1.0.219", features = ["derive"]  }
toml = "0.8.20"
directories = "6.0.0"
anyhow = "1.0.98"
async-std = "1.13.1"
tokio = { version = "1.44.2", features = ["rt", "time"] }
once_cell = "1.21.3"

[features]
default = ["desktop"]
desktop = ["dioxus/desktop",]
server = ["dioxus/server"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
